<resources>
    <string name="title_activity_test">test</string>
    <string name="app_name">CSE110_Project</string>

    // General buttons
    <string name="routesButton">Routes</string>
    <string name="homeButton">Home</string>
    <string name="teamButton">Team</string>
    <string name="mockingButton">DEV</string>
    <string name="startWalkButton">Start Walk</string>
    <string name="stopWalkButton">Stop Walk</string>
    <string name="cancelButton">CANCEL</string>
    <string name="saveButton">Save</string>
    <string name="submitButton">Submit</string>
    <string name="backButton">Back</string>
    <string name="acceptButton">Accept</string>
    <string name="declineButton">Decline</string>

    // General text
    <string name="favText">FAV</string>
    <string name="stepsText">Steps</string>
    <string name="milesText">Miles</string>
    <string name="emptyText"> </string>
    <string name="noDataText">N/A</string>
    <string name="defaultSteps">0</string>
    <string name="defaultMiles">0.0</string>
    <string name="defaultTime">00:00</string>

    // Home screen
    <string name="homeHeader">Walk Walk Revolution</string>
    <string name="homeTeamText">Team updates:</string>
    <string name="dailyDataText">Today, you walked…</string>
    <string name="recentWalkText">Your most recent walk was…</string>
...
    <string name="teamRoutesTitleButton">Team Routes</string>

    //walked or not
    <string name="routeWalked">Walked</string>
    // Walk screen
    <string name="walkHeader">Walk</string>
    <string name="walkDefaultName">New Route</string>
    <string name="walkDefaultStartingPoint"> </string>
    <string name="walkDefaultNotes"> </string>
    <string name="verifyCancelPrompt">Are you sure you want to cancel?</string>
    <string name="verifySavePrompt">Would you like to save your walk?</string>
    <string name="canceledToast">Canceled</string>

...
    <string name="emptyRouteName">Please enter a route name</string>
    <string name="invalidRouteNameError">Invalid route name</string>
    <string name="startingPointPrompt">Enter the starting point (optional)</string>
    <string name="startingPointHint">Starting point</string>
    <string name="featureSelectPrompt">Select route features (optional)</string>
    <string name="featureFlat">Flat</string>
    <string name="featureHilly">Hilly</string>
    <string name="featureLoop">Loop</string>
    <string name="featureOutBack">Out-and-Back</string>
    <string name="featureStreets">Streets</string>
    <string name="featureTrail">Trail</string>
    <string name="featureEvenSurface">Even Surface</string>
    <string name="featureUnevenSurface">Uneven Surface</string>
    <string name="difficultyMid">Moderate</string>
    <string name="difficultyEasy">Easy</string>
    <string name="difficultyHard">Difficult</string>
    <string name="routeNotesPrompt">Enter notes for this route (optional)</string>
    <string name="routeNotesHint">Notes for this route</string>

    // Mocking screen
    <string name="mockingStepsPrompt">Tap to add steps</string>
    <string name="mockingStepsButton">+500</string>
    <string name="mockingTimePrompt">Enter the current time</string>
    <string name="mockingTimeHint">00:00</string>
    <string name="mockingTimeError">Invalid time format. Please try again</string>
    <string name="mockingTimeSuccess">Saved</string>

    // Route details Screen
...
