...
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5">

    <TextView
        android:id="@+id/routeRowName"
        android:layout_width="18dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/routeNameHint"
        android:textSize="24sp" />

...
        android:layout_height="match_parent"
        android:contentDescription="@string/routeWalked"
        app:srcCompat="@android:drawable/checkbox_on_background"
        tools:srcCompat="@android:drawable/checkbox_on_background" />

    <Button
        android:id="@+id/routeRowFavorite"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/favText"
        android:focusable="false"
        android:focusableInTouchMode="false"
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2">

        <TextView
            android:id="@+id/routeRowSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/noDataText"
            android:textAlignment="center"
            android:textSize="15sp" />
...
            android:layout_weight="0.2"
            android:text="@string/stepsText"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/routeRowMiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/noDataText"
            android:textAlignment="center"
            android:textSize="15sp" />
...
            android:layout_weight="0.3"
            android:text="@string/milesText"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/routeRowTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/noDataText"
            android:textAlignment="center"
            android:textSize="15sp" />
...
            android:layout_weight="0.3"
            android:text="@string/detailsStartDateText"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/routeRowDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/noDataText"
            android:textSize="15sp" />

...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2">

        <TextView
            android:id="@+id/routeRowStartingPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/startingPointHint"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2">

        <TextView
            android:id="@+id/routeRowFlatHilly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/noDataText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/routeRowLoopOutBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/noDataText"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/routeRowStreetsTrail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/noDataText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/routeRowEvenUneven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/noDataText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/routeRowDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/noDataText"
            android:textSize="15sp" />

...
