...
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/routeNamePrompt"
            android:textStyle="bold" />

        <Button
            android:id="@+id/favButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:hint="@string/favText" />

    </LinearLayout>

    <EditText
        android:id="@+id/routeNameInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:maxLength="21"
        android:hint="@string/routeNameHint"
        android:padding="10dp" />
...
        android:layout_height="wrap_content"
        android:text="@string/startingPointPrompt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/startingPointInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/startingPointHint"
        android:inputType="textVisiblePassword"
        android:maxLength="24"
        android:padding="10dp" />
...
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/featureFlat"
            android:padding="10dp" />

        <Button
            android:id="@+id/hillyButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/featureHilly"
            android:padding="10dp" />

...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2">

        <Button
            android:id="@+id/streetsButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/featureStreets"
            android:padding="10dp" />

...
        android:layout_height="wrap_content"
        android:text="@string/routeNotesPrompt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/routeNotesInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:maxLength="80"
        android:hint="@string/routeNotesHint"
        android:padding="10dp" />
...
