package com.example.cse110_project.ui_tests;


import android.content.Intent;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.appcompat.app.AppCompatActivity;
import androidx.test.core.app.ApplicationProvider;
import androidx.test.espresso.DataInteraction;
import androidx.test.espresso.ViewInteraction;
import androidx.test.espresso.matcher.ViewMatchers;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;

import com.example.cse110_project.activities.MainActivity;
import com.example.cse110_project.R;
import com.example.cse110_project.WWRApplication;
import com.example.cse110_project.fitness.FitnessService;
import com.example.cse110_project.fitness.FitnessServiceFactory;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.Matchers;
import org.hamcrest.TypeSafeMatcher;
import org.hamcrest.core.IsInstanceOf;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.anything;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class DRoutesWalkDetailsUITest {
    private static final String TEST_SERVICE = "TEST_SERVICE";

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule =
            new ActivityTestRule<>(MainActivity.class);

    @Before
    public void setUp() {
        WWRApplication.getUser().setStepsOffset(0);
        WWRApplication.getUser().setHeight(61);
        FitnessServiceFactory.put(TEST_SERVICE, DRoutesWalkDetailsUITest.TestFitnessService::new);
        Intent intent = new Intent(ApplicationProvider.getApplicationContext(), MainActivity.class);
        intent.putExtra(MainActivity.FITNESS_SERVICE_KEY, TEST_SERVICE);
    }

    @Test
    public void routesWalkDetailsUITest() {ViewInteraction appCompatButton2 = onView(
                Matchers.allOf(ViewMatchers.withId(R.id.mockingButton), withText("DEV"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                14),
                        isDisplayed()));
        appCompatButton2.perform(click());

        ViewInteraction appCompatButton1 = onView(
                allOf(withId(R.id.mockingStepsButton), withText("+500"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                0),
                        isDisplayed()));
        appCompatButton1.perform(click());

        ViewInteraction appCompatButton5 = onView(
                allOf(withId(R.id.mockingStepsButton), withText("+500"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                0),
                        isDisplayed()));
        appCompatButton5.perform(click());

        ViewInteraction appCompatButton3 = onView(
                allOf(withId(R.id.mockingStepsButton), withText("+500"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                0),
                        isDisplayed()));
        appCompatButton3.perform(click());

        ViewInteraction appCompatButton4 = onView(
                allOf(withId(R.id.mockingStepsButton), withText("+500"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                0),
                        isDisplayed()));
        appCompatButton4.perform(click());

        ViewInteraction appCompatButton7 = onView(
                allOf(withId(R.id.mockingTimeSubmitButton), withText("Submit"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                2),
                        isDisplayed()));
        appCompatButton7.perform(click());

        ViewInteraction appCompatButton8 = onView(
                allOf(withId(R.id.mockingBackButton), withText("Back"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                5),
                        isDisplayed()));
        appCompatButton8.perform(click());

        ViewInteraction textView = onView(withId(R.id.dailySteps));
        textView.check(matches(withText("2000")));

        ViewInteraction textView2 = onView(withId(R.id.dailyMiles));
        textView2.check(matches(withText("0.8")));

        ViewInteraction textView3 = onView(withId(R.id.recentSteps));
        textView3.check(matches(withText("N/A")));

        ViewInteraction textView4 = onView(withId(R.id.recentMiles));
        textView4.check(matches(withText("N/A")));

        ViewInteraction textView5 = onView(withId(R.id.recentTime));
        textView5.check(matches(withText("N/A")));

        ViewInteraction appCompatButton9 = onView(
                allOf(withId(R.id.startWalkButton), withText("Start Walk"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                2),
                        isDisplayed()));
        appCompatButton9.perform(click());

        ViewInteraction textView6 = onView(withId(R.id.walkRouteName));
        textView6.check(matches(withText("New Route")));

        ViewInteraction appCompatButton10 = onView(
                allOf(withId(R.id.walkMockingButton), withText("DEV"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                0),
                        isDisplayed()));
        appCompatButton10.perform(click());

        ViewInteraction appCompatButton11 = onView(
                allOf(withId(R.id.mockingStepsButton), withText("+500"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                0),
                        isDisplayed()));
        appCompatButton11.perform(click());

        ViewInteraction appCompatButton12 = onView(
                allOf(withId(R.id.mockingStepsButton), withText("+500"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                0),
                        isDisplayed()));
        appCompatButton12.perform(click());

        ViewInteraction appCompatEditText2 = onView(
                allOf(withId(R.id.mockingTimeInput), withText("00:00"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                4),
                        isDisplayed()));
        appCompatEditText2.perform(click());

        ViewInteraction appCompatEditText3 = onView(
                allOf(withId(R.id.mockingTimeInput), withText("00:00"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                4),
                        isDisplayed()));
        appCompatEditText3.perform(replaceText("12:21"));

        ViewInteraction appCompatEditText4 = onView(
                allOf(withId(R.id.mockingTimeInput), withText("12:21"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                4),
                        isDisplayed()));
        appCompatEditText4.perform(closeSoftKeyboard());

        ViewInteraction appCompatButton13 = onView(
                allOf(withId(R.id.mockingTimeSubmitButton), withText("Submit"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                2),
                        isDisplayed()));
        appCompatButton13.perform(click());

        ViewInteraction appCompatButton14 = onView(
                allOf(withId(R.id.mockingBackButton), withText("Back"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                5),
                        isDisplayed()));
        appCompatButton14.perform(click());

        ViewInteraction appCompatButton15 = onView(
                allOf(withId(R.id.stopWalkButton), withText("Stop Walk"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                10),
                        isDisplayed()));
        appCompatButton15.perform(click());

        ViewInteraction appCompatButton16 = onView(
                allOf(withId(android.R.id.button1), withText("Save"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.buttonPanel),
                                        0),
                                3)));
        appCompatButton16.perform(scrollTo(), click());

        ViewInteraction appCompatEditText5 = onView(
                allOf(withId(R.id.routeNameInput),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.custom),
                                        0),
                                1),
                        isDisplayed()));
        appCompatEditText5.perform(replaceText("Alpha"), closeSoftKeyboard());

        ViewInteraction appCompatButton17 = onView(
                allOf(withId(android.R.id.button1), withText("Save"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.buttonPanel),
                                        0),
                                3)));
        appCompatButton17.perform(scrollTo(), click());

        ViewInteraction textView7 = onView(withId(R.id.routeRowName));
        textView7.check(matches(withText("Alpha")));

        ViewInteraction textView8 = onView(withId(R.id.routeRowSteps));
        textView8.check(matches(withText("1000")));

        ViewInteraction textView9 = onView(withId(R.id.routeRowMiles));
        textView9.check(matches(withText("0.4")));

        ViewInteraction textView10 = onView(withId(R.id.routeRowTime));
        textView10.check(matches(withText("12:21")));

        ViewInteraction textView11 = onView(withId(R.id.routeRowStartingPoint));
        textView11.check(matches(withText("")));

        ViewInteraction textView12 = onView(withId(R.id.routeRowFlatHilly));
        textView12.check(matches(withText("")));

        ViewInteraction textView13 = onView(withId(R.id.routeRowLoopOutBack));
        textView13.check(matches(withText("")));

        ViewInteraction textView14 = onView(withId(R.id.routeRowStreetsTrail));
        textView14.check(matches(withText("")));

        ViewInteraction textView15 = onView(withId(R.id.routeRowEvenUneven));
        textView15.check(matches(withText("")));

        ViewInteraction textView16 = onView(withId(R.id.routeRowDifficulty));
        textView16.check(matches(withText("")));

        ViewInteraction appCompatButton18 = onView(
                allOf(withId(R.id.routesHomeButton), withText("Home"),
                        childAtPosition(
                                allOf(withId(R.id.coordinatorLayout),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                2),
                        isDisplayed()));
        appCompatButton18.perform(click());

        ViewInteraction textView17 = onView(withId(R.id.dailySteps));
        textView17.check(matches(withText("3000")));

        ViewInteraction textView18 = onView(withId(R.id.dailyMiles));
        textView18.check(matches(withText("1.2")));

        ViewInteraction textView19 = onView(withId(R.id.recentSteps));
        textView19.check(matches(withText("1000")));

        ViewInteraction textView20 = onView(withId(R.id.recentMiles));
        textView20.check(matches(withText("0.4")));

        ViewInteraction textView21 = onView(withId(R.id.recentTime));
        textView21.check(matches(withText("12:21")));

        ViewInteraction appCompatButton19 = onView(
                allOf(withId(R.id.routesButton), withText("Routes"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                15),
                        isDisplayed()));
        appCompatButton19.perform(click());

        ViewInteraction appCompatButton20 = onView(
                allOf(withId(R.id.routesNewRouteButton), withText("+"),
                        childAtPosition(
                                allOf(withId(R.id.coordinatorLayout),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                0),
                        isDisplayed()));
        appCompatButton20.perform(click());

        ViewInteraction appCompatEditText6 = onView(
                allOf(withId(R.id.routeNameInput),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.custom),
                                        0),
                                1),
                        isDisplayed()));
        appCompatEditText6.perform(replaceText("Gamma"), closeSoftKeyboard());

        ViewInteraction appCompatButton21 = onView(
                allOf(withId(R.id.favButton),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        0),
                                1),
                        isDisplayed()));
        appCompatButton21.perform(click());

        ViewInteraction appCompatButton22 = onView(
                allOf(withId(R.id.streetsButton),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        7),
                                0),
                        isDisplayed()));
        appCompatButton22.perform(click());

        ViewInteraction appCompatButton23 = onView(
                allOf(withId(R.id.hillyButton),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        5),
                                1),
                        isDisplayed()));
        appCompatButton23.perform(click());

        ViewInteraction appCompatEditText7 = onView(
                allOf(withId(R.id.startingPointInput),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.custom),
                                        0),
                                3),
                        isDisplayed()));
        appCompatEditText7.perform(replaceText("Star"), closeSoftKeyboard());

        ViewInteraction appCompatEditText8 = onView(
                allOf(withId(R.id.routeNotesInput),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.custom),
                                        0),
                                11),
                        isDisplayed()));
        appCompatEditText8.perform(replaceText("Notes"), closeSoftKeyboard());

        ViewInteraction appCompatButton24 = onView(
                allOf(withId(android.R.id.button1), withText("Save"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.buttonPanel),
                                        0),
                                3)));
        appCompatButton24.perform(scrollTo(), click());

        ViewInteraction textView22 = onView(
                allOf(withId(R.id.routeRowName), withText("Gamma"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        0),
                                0)));
        textView22.check(matches(withText("Gamma")));

        ViewInteraction textView23 = onView(
                allOf(withId(R.id.routeRowFavorite), withText("FAV"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        0),
                                1)));
        textView23.check(matches(withText("FAV")));

        ViewInteraction textView24 = onView(
                allOf(withId(R.id.routeRowSteps), withText("N/A"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        1),
                                0)));
        textView24.check(matches(withText("N/A")));

        ViewInteraction textView25 = onView(
                allOf(withId(R.id.routeRowMiles), withText("N/A"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        1),
                                2)));
        textView25.check(matches(withText("N/A")));

        ViewInteraction textView26 = onView(
                allOf(withId(R.id.routeRowTime), withText("N/A"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        1),
                                4)));
        textView26.check(matches(withText("N/A")));

        ViewInteraction textView27 = onView(
                allOf(withId(R.id.routeRowDate), withText("N/A"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        1),
                                6)));
        textView27.check(matches(withText("N/A")));

        ViewInteraction textView28 = onView(
                allOf(withId(R.id.routeRowStartingPoint), withText("Star"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        2),
                                0)));
        textView28.check(matches(withText("Star")));

        ViewInteraction textView29 = onView(
                allOf(withId(R.id.routeRowFlatHilly), withText("Hilly"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        3),
                                0)));
        textView29.check(matches(withText("Hilly")));

        ViewInteraction textView30 = onView(
                allOf(withId(R.id.routeRowStreetsTrail), withText("Streets"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        3),
                                2)));
        textView30.check(matches(withText("Streets")));

        ViewInteraction textView31 = onView(
                allOf(withId(R.id.routeRowName), withText("Alpha"),
                        childAtPosition(
                                childAtPosition(
                                        IsInstanceOf.<View>instanceOf(android.widget.LinearLayout.class),
                                        0),
                                0)));
        textView31.check(matches(withText("Alpha")));

        ViewInteraction appCompatButton25 = onView(
                allOf(withId(R.id.routesHomeButton), withText("Home"),
                        childAtPosition(
                                allOf(withId(R.id.coordinatorLayout),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                2),
                        isDisplayed()));
        appCompatButton25.perform(click());

